# py-jama-rest-client

./: .gitignore  CONTRIBUTING.md  LICENSE.txt  Pipfile  README.md  pyproject.toml  setup.py
docs/: client.m.html  core.m.html  index.html  index.md  py_jama_rest_client.html  search.js
docs/py_jama_rest_client/: client.html  core.html  index.html
examples/: get_all_projects.py
jama/: client.py  core.py
py_jama_rest_client/: client.py  core.py  exceptions.py
test/: test_jamaClient.py  test_jamaClientCore.py
