[tool.poetry]
name = "py-jama-rest-client"
version = "1.17.2b7"
description = "A client for the jama Connect REST API"
authors = ["Nick McHale"]
license = "MIT"
readme = "README.md"
packages = [{ include = "py_jama_rest_client" }]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["test"]
